# my-prog-language

./: .gitmodules  CMakeLists.txt
cmake/: CodeCoverage.cmake
debug-utils/: compile  fast-compilation
flex+bison/: lexer.l  parser.y
include/: SC.h  ast.h  exceptions.h  types.h  visitor.h
include/ast/: SC.h  ast.h
include/llvm/: g-adapter.h  g-commands.h  g-sub.h  llvm-shortcuts.h
source/: CMakeLists.txt  SC.cpp  ast.cpp  bound.cpp  lambda.cpp
source/ast/: CMakeLists.txt  SC.cpp  ast.cpp  lambda.cpp
source/llvm/: CMakeLists.txt  g-adapter.cpp  g-commands.cpp  g-sub.cpp  llvm-shortcuts.cpp
tests/: CMakeLists.txt  SC_test.cpp  ast.cpp  ast_test.cpp  compiling_tests.cpp  fixtures.h  help.cpp  help.h  printer.cpp  tree.h
